# tiedown

./: .env  .gitignore  README.md  algorithms.md  api.md  link-test.ipynb  pyproject.toml  todo.md
docs/: api.md  ideas.md  index.ipynb
docs/section-01-getting-started/: getting-started.ipynb
docs/section-01-introduction/: introduction.ipynb
docs/section-02-project-structure/: project-structure.ipynb
docs/section-03-tiedown-commands/: tiedown-commands.ipynb  tiedown-instructions.ipynb
docs/section-04-templates/: templates.ipynb
docs/section-05-numbering/: section-numbering.ipynb
docs/section-06-table-of-contents/: table-of-contents.ipynb
docs/section-07-links/: links.ipynb
docs/section-99-appendix/: introduction.ipynb
example_project/: create-docs.ipynb  knotbook-demo.ipynb
example_project/content/: copy_test.md  index.ipynb
example_project/docs/: index.ipynb
example_project/templates/: main.ipynb
knotbooks/: book.py  project.py  utils.py
knotbooks/tests/: test_book.py  test_knotbook.py  test_project.py
src/: book.py  project.py
src/tests/: test_book.py  test_project.py  test_pyclass.py
src/tiedown/: __init__.py  book.py  extension.py  instructions.py  links.py  project.py  toc.py  utils.py
test_project/content/: TOC.ipynb
test_project/output/: TOC.ipynb
test_project/templates/: main.ipynb
tests/: test_book.py  test_getting_started.py  test_project.py  test_pyclass.py
tiedown/: __init__.py  book.py  instructions.py  project.py  utils.py
tiedown/tests/: test_book.py  test_project.py  test_pyclass.py
(+26 files in other folders)
